--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "ethers": "^5.0.27",
     "node-sass": "^4.14.1",
     "prismjs": "^1.23.0",
     "prop-types": "^15.7.2",
