--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
+    "bignumber.js": "^9.0.1",
     "bootstrap": "^4.6.0",
     "ethers": "^5.0.27",
     "node-sass": "^4.14.1",
