--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-simple-code-editor": "^0.11.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "solc-js": "^1.0.1",
+    "solcjs-core": "^0.7.0",
     "web-vitals": "^0.2.4",
     "web3": "^1.3.1",
     "web3modal": "^1.9.3"
